# phase4b-workflow-test

./: .dockerignore  .env.example  .gitignore  BACKEND_WORKFLOW_TEST_PROMPT.md  DEPLOYMENT.md  Dockerfile  GITHUB_SETUP_GUIDE.md  MONITORING.md  README.md  adws.toml  debug_backend_workflow.py  docker-compose.yml  pyproject.toml  pytest.ini  run_workflow_tests.py  run_workflow_tests_complete.py  run_workflow_tests_fixed.py  workflow_test_results.json
.github/workflows/: ci.yml  deploy.yml  docker-build.yml  release.yml
adws/: __init__.py
adws/api/: __init__.py  server.py
adws/config/: __init__.py  routing.yml
adws/consensus/: __init__.py  engine.py
adws/cost/: __init__.py  budget.py  tracker.py
adws/events/: README.md  __init__.py  bus.py  filters.py  models.py
adws/llm/: __init__.py  config.py  orchestrator.py
adws/observability/: __init__.py  health.py  logging.py  metrics.py
adws/providers/: __init__.py  base.py  interfaces.py  registry.py
adws/routing/: __init__.py  engine.py  fallback.py
app/: __init__.py
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml.example  service.yaml
monitoring/: grafana-dashboards.yml  grafana-datasources.yml  prometheus.yml
scripts/: deploy_production.sh  health_check.sh  local_dev.sh  rollback.sh
tests/: __init__.py  conftest.py  test_app.py
workflow_test_issues/: README.md  TESTING_SUMMARY.md  WORKFLOW_TEST_PLAN.md  issue_001_backend_standard.md  issue_002_backend_tdd.md  issue_003_frontend_standard.md  issue_004_frontend_tdd.md
(+61 files in other folders)
