[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phase4b_test"
version = "0.1.0"
description = "A brief description of your project"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "pydantic>=2.8,<3.0",
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<0.24",
  "pytest-cov>=4.0,<6.0",
  "openai>=2.0.0,<3.0",
  "aiosqlite>=0.20.0,<0.21",
  "bandit>=1.7.5,<2.0",
  "defusedxml>=0.7.1,<0.8",
  "rapidfuzz>=3.0.0,<4.0",
  "pyyaml>=6.0,<7.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "adws*"]

[project.optional-dependencies]
consensus = [
    "rapidfuzz>=3.0.0",
]
frontend = [
    "pytest-playwright>=0.4.0",
]
